modtools: Limit height to avoid two scrollbars

--- a/sass/_modal.scss
+++ b/sass/_modal.scss
@@ -31,7 +31,7 @@
         }
 
         .scrollable-container {
-            max-height: 50vh;
+            max-height: 45vh;
             overflow-y: auto;
         }
 
